--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
 
 
     <string-array name="Complain">
-
+        <item>Please Select Complain Type</item>
         <item>Namaj</item>
         <item>Class faki</item>
         <item>Palano</item>
